--- a/app/src/main/res/layout/activity_detalle.xml
+++ b/app/src/main/res/layout/activity_detalle.xml
@@ -22,10 +22,10 @@
             android:layout_gravity="center"
             android:textStyle="bold"/>
         <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/im"
-            android:layout_gravity="center_horizontal"/>
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            android:layout_gravity="center"
+            android:id="@+id/im"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
